--- a/hw01/index.html
+++ b/hw01/index.html
@@ -208,18 +208,22 @@
     </div>
   </div>
   <!-- ------------------------------------------------>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">    
-       <figure>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div style="max-width: 700px; margin: 0 auto;">
+        <figure>
           <figcaption>稿紙第30頁</figcaption>
-          <img src="30.png" alt="稿紙第30頁" class="img-fluid" />
-       </figure>
-       <figure>
-          <figcaption>稿紙第57頁</figcaption>
-          <img src="57.png" alt="稿紙第57頁" class="img-fluid" />
+          <img src="30.png" class="img-fluid" alt="稿紙第30頁">
         </figure>
+        <figure>
+          <figcaption>稿紙第57頁</figcaption>
+          <img src="57.png" class="img-fluid" alt="稿紙第57頁">
+        </figure>
+      </div>
     </div>
   </div>
+</div>
   <!-- ------------------------------------------------>
    <div class="row hw12">
     <div class="col-md-12 twenty">    
