--- a/hw05/index.html
+++ b/hw05/index.html
@@ -20,13 +20,9 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
   @font-face {
-     font-family:'CircleFont';
-    src: url(https://github.com/IcedPiPi/ai2025s/hw01/Font_112590032.woff2); 
-  }
-  @font-face {
-     font-family:'t112590032';
-    src: url(https://github.com/IcedPiPi/ai2025s/hw01/Font_112590032.woff2);
-  }
+      font-family: 'CircleFont';
+      src: url('https://icedpipi.github.io/ai2025s/hw01/Font_112590032.woff2') format('woff2');
+    }
   table {
       border-collapse: collapse;
       border: 2px solid white; /* rgba(217,140,144,1) */
