--- a/hw04/index.html
+++ b/hw04/index.html
@@ -234,24 +234,22 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">    
       <figure>
-        <figcaption>替換Ckeckpoint、LoRA完成辛梅爾文生圖</figcaption>
+        <figcaption>替換Ckeckpoint、LoRA完成文生圖</figcaption>
         <a href="https://civitai.com/models/820208/obsession-illustrious-xl">Checkpoint連結</a>
         <br>
-        <a href="https://civitai.com/models/1204563?modelVersionId=1356500">LoRA連結1</a>
+        <a href="https://civitai.com/models/935844/coefont-coefont-sisters-allialmillial">LoRA連結1</a>
         <br>
-        <a href="https://civitai.com/models/1201355/r754496-or-shiiros-styles-or-niji">LoRA連結2</a>
         <p>1024 * 1280</p>
         <p>LoRA1 Strength : 0.5</p>
         <p>LoRA2 Strength : 0.45</p>
-        <p>r17329_illu, xxx667_illu, very awa, anime screencap, masterpiece,best quality,1boy, 1girl, 
-          frieren, himmel \(sousou no frieren\), outdoors, upper body, eye contact, light blue hair, 
-          cape, capelet, earrings, dappled sunlight, day, hand on another&#039;s head, kesyeru, sousou no frieren, 
-          &lt;lora:r17329_illu-000015:0.45&gt;, &lt;lora:XXX477-000016:0.5&gt;,
+        <p>提示詞:
+        <br>
+        <p>Positive:masterpiece, best quality, high score, great score, illustration,two people,white hair has left side tail, black hair has right side tail,  closed mouth, indoors, upper body,one white hair and white clothes,one black hair and black clothes,two people's eyes are open, long hair, daily life, allial, millial, <lora:allial_millial_pony_v1:1>
         </p>
-        <p>nsfw,lowres,bad anatomy,bad hands,text,error,missing fingers,extra digit,fewer digits,cropped,worst quality,
-          low quality,normal quality,jpeg artifacts,signature,watermark,username,blurry,artist name,
+        <br>
+        <p>Negative:lowers,extra digital,fewer digitals, error, blurry, missing person,extra clothing accessories
         </p>
-        <img src="img2.png" width="100%"/>
+        <img src="ComfyUI_temp_igqtt_00083_.png" width="100%"/>
       </figure>
     </div>
   </div>
