--- a/hw05/index.html
+++ b/hw05/index.html
@@ -20,9 +20,9 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
   @font-face {
-      font-family: 'CircleFont';
-      src: url('https://icedpipi.github.io/ai2025s/hw01/Font_112590032.woff2') format('woff2');
-    }
+    font-family:'CircleFont';
+    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
+  }
   table {
       border-collapse: collapse;
       border: 2px solid white; /* rgba(217,140,144,1) */
