--- a/hw05/index.html
+++ b/hw05/index.html
@@ -146,16 +146,14 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 04</h1>
+      <h1>作業 05</h1>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      本次作業是讓大家體驗當前時下熱門的ChatGPT生圖風格，而最近最為熱門的是生成吉卜力風格圖片
-      ，本次作業除了讓大家能生成圖片外，也能夠簡單地針對圖片做局部修改以及最後的製作成短影音，
-      讓大家能夠快速地針對自己的需求做產出。
+      透過ChatGPT生成圖片，之前是沒有試過這個，用了之後感覺就是網路上常看到的ai生成圖片，每次要改一點提示詞確認結果，就要等他生成，加上我沒有訂閱付費版，用個幾張就會超過頻寬限制，用起來的感覺並沒有說多好，跟ComfyUI比起來使用起來的感覺差了一點。
     </div>
   </div>
 
@@ -201,7 +199,7 @@
       <figure>
         <figcaption>完成ChatGPT生吉卜力圖</figcaption>
         <p>你所選擇的圖片</p>
-        <img src="me.jpg" width="50%"/>
+        <img src="0.jpg" width="50%"/>
         <p>轉換吉卜力風格</p>
         <img src="1.png" width="50%"/>
       </figure>
