--- a/hw06/index.html
+++ b/hw06/index.html
@@ -230,7 +230,7 @@
   <div class="row hw12 bottomrow">
     <div class="col-md-12 twenty">
        <td>3.Strong baseline - 生成完整角色動畫</td><br>
-       <img src="AnimateDiff_00003.mp4" ><br>
+       <img src="AnimateDiff_00003.gif" ><br>
        <td> 使用提示詞:
         "0" :"<lora:tsunose_kotone_character_NoobAI_v1:1>,hair accessories,Tsunose Kotone,green hair,one yellow hair on left,white coat,white inner,smile,winter,snow",
         "10" :"<lora:tsunose_kotone_character_NoobAI_v1:1>,hair accessories,Tsunose Kotone,green hair,one yellow hair on left,white coat,white inner,smile,winter,snow",
