--- a/hw02/index.html
+++ b/hw02/index.html
@@ -154,7 +154,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      這次的作業因為第一次作業調整切割大小花了很久，導致很晚才完成，生成字體本身並沒有花太多心力，助教改良字體生成的程式，字體生成不用像原本一樣要讓電腦開著跑一個星期，讓這次作業比原本還要更輕鬆完成，雖然不太清楚是否有正確操作。
     </div>
   </div>
 
