--- a/hw07/index.html
+++ b/hw07/index.html
@@ -152,7 +152,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      在生成的時候一開始找了半小時的影片，結果也花了8~10分鐘就處理完了，1~2分鐘的影片花了0.5~1分鐘處理。輸出的字幕準確率很高，除了一部分同音跟漢字轉換會搞混，剩下就是有一部分的字幕會出問題，不管影片長度，有時候就會有這個錯誤，不確定是什麼原因。
     </div>
   </div>
 
