--- a/hw04/index.html
+++ b/hw04/index.html
@@ -153,9 +153,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      本次作業是接觸文生圖的初步應用，使用的是目前提供個人使用功能最齊全的文生圖工具ComfyUI，
-      透過節點式的方式連接模塊，構建工作流並執行產生圖象，過程有趣且也能透過該過程理解模型運作
-      流程，最後根據主題成功生成芙莉蓮的相關圖像。
+      這次作業因為原本使用的pinggy連線有問題，花了很久才完成實作，不過ComfyUI的執行畫面忘記截圖，加上colab的頻寬用完了，所以ui畫面沒有截圖到。用這個方法生成出的圖片跟使用的提示詞多少有很大的關係，我用的算是很少，生成了很多次才有一張比較滿意的圖片。
     </div>
   </div>
 
