--- a/hw06/index.html
+++ b/hw06/index.html
@@ -206,7 +206,7 @@
   <div class="row hw12 bottomrow">
     <div class="col-md-12 twenty">
        <td>2.Medium baseline - 生成角色的圖片</td><br>
-       <img src="frame_000_delay-0.07s.png"  width="500" height="600"><br>
+       <img src="frame_000_delay-0.07s.png"><br>
        <td> 使用提示詞:
         "0" :"<lora:tsunose_kotone_character_NoobAI_v1:1>,hair accessories,Tsunose Kotone,green hair,one yellow hair on left,white coat,white inner,smile,winter,snow",
         "10" :"<lora:tsunose_kotone_character_NoobAI_v1:1>,hair accessories,Tsunose Kotone,green hair,one yellow hair on left,white coat,white inner,smile,winter,snow",
