--- a/hw04/index.html
+++ b/hw04/index.html
@@ -176,12 +176,12 @@
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
           <td id='m2'>4</td>
-          <td>Medium baseline - 完成芙莉蓮文生圖</td>
+          <td>Medium baseline - 完成文生圖</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>2</td>
-          <td>Strong baseline - 替換模型完成辛梅爾文生圖</td>
+          <td>Strong baseline - 替換模型完成文生圖</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
@@ -210,7 +210,7 @@
         <figcaption>完成芙莉蓮Checkpoint、LoRA文生圖</figcaption>
         <a href="https://civitai.com/models/1188071?modelVersionId=1337429">Checkpoint連結</a>
         <br>
-        <a href="https://civitai.com/models/1209474/a4-test?modelVersionId=1373925">LoRA連結</a>
+        <a href="https://civitai.com/models/935844/coefont-coefont-sisters-allialmillial">LoRA連結</a>
         <p>1344 * 768</p>
         <p>LoRA Strength : 1.0</p>
         <p>Positive：masterpiece, best quality, high score, great score, absurdres, illustration, 
@@ -223,7 +223,7 @@
            cropped, worst quality, low quality, low score, bad score, average score, signature, watermark, username, 
            blurry,
         </p>
-        <img src="img1.png" width="100%"/>
+        <img src="ComfyUI_temp_igqtt_00011_.png" width="100%"/>
       </figure>
     </div>
   </div>
@@ -238,8 +238,7 @@
         <a href="https://civitai.com/models/935844/coefont-coefont-sisters-allialmillial">LoRA連結1</a>
         <br>
         <p>1024 * 1280</p>
-        <p>LoRA1 Strength : 0.5</p>
-        <p>LoRA2 Strength : 0.45</p>
+        <p>LoRA1 Strength : 0.8</p>
         <p>提示詞:
         <br>
         <p>Positive:masterpiece, best quality, high score, great score, illustration,two people,white hair has left side tail, black hair has right side tail,  closed mouth, indoors, upper body,one white hair and white clothes,one black hair and black clothes,two people's eyes are open, long hair, daily life, allial, millial, <lora:allial_millial_pony_v1:1>
