--- a/hw05/index.html
+++ b/hw05/index.html
@@ -179,7 +179,7 @@
           <td>Medium baseline - 完成圖像變換</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
           <td id='m3'>2</td>
           <td>Strong baseline - 完成短影音製作</td>
         </tr>
