--- a/hw04/index.html
+++ b/hw04/index.html
@@ -207,21 +207,15 @@
   <div class="row hw12">
     <div class="col-md-12 twenty"> 
       <figure>
-        <figcaption>完成芙莉蓮Checkpoint、LoRA文生圖</figcaption>
+        <figcaption>完成Checkpoint、LoRA文生圖</figcaption>
         <a href="https://civitai.com/models/1188071?modelVersionId=1337429">Checkpoint連結</a>
         <br>
         <a href="https://civitai.com/models/935844/coefont-coefont-sisters-allialmillial">LoRA連結</a>
         <p>1344 * 768</p>
         <p>LoRA Strength : 1.0</p>
-        <p>Positive：masterpiece, best quality, high score, great score, absurdres, illustration, 
-          pointy ears, 1girl, solo, frieren, sousou no frieren, long hair, 1boy, flower, 
-          head wreath, smile, petals, earrings, jewelry, shirt, elf, blue flower, outdoors, 
-          green eyes, upper body, long sleeves, striped shirt, striped, sky, solo focus, closed mouth, 
-          white hair, falling petals, glowing, &lt;lora:mix-a4-v2:1&gt;,
+        <p>Positive：masterpiece, best quality, high score, great score, illustration, <lora:allial_millial_pony_v1
         </p>
-        <p>Negative：lowres, bad anatomy, bad hands, text, error, missing finger, extra digits, fewer digits,
-           cropped, worst quality, low quality, low score, bad score, average score, signature, watermark, username, 
-           blurry,
+        <p>Negative：lowers,extra digital,fewer digitals, error, blurry
         </p>
         <img src="ComfyUI_temp_igqtt_00011_.png" width="100%"/>
       </figure>
