--- a/hw01/index.html
+++ b/hw01/index.html
@@ -159,7 +159,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
       <div class="col-md-12 twenty">
-        稿紙位置連結：(手寫的稿紙上傳壓縮檔、電子書寫的上傳pdf檔)
+        稿紙位置連結：(手寫的稿紙上傳壓縮檔、電子書寫的上傳pdf檔，pdf跟zip太大了，沒辦法上傳github，所以我傳的是.png)
         <input type="button" name="back" onclick="location.href='https://github.com/IcedPiPi/ai2025s/blob/main/hw01/1~57'" value="按我 ٩(｡・ω・｡)و 前往">
         (p.s 請記得修改網址)
       </div>
