--- a/hw07/index.html
+++ b/hw07/index.html
@@ -183,7 +183,7 @@
           <td>Strong baseline - 通過助教的影片摘要審核 </td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
           <td id='m4'>-10</td>
           <td>沒有寫100字心得</td>
         </tr>
