--- a/hw06/index.html
+++ b/hw06/index.html
@@ -152,7 +152,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      使用ComfyUI生成動畫，一開始colab的程式在執行的時候不知道為什麼資料夾跑掉了，後面靠手動把資料夾調整到該有的位置才解決。ui裡面的界面也花了一段時間才找到要更改的lora跟提示詞，整體的流程跟圖片生成相似，只是多了把圖片整合成gif的部份而已。
     </div>
   </div>
 
