--- a/hw02/index.html
+++ b/hw02/index.html
@@ -20,8 +20,16 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
   @font-face {
-      font-family: 'CircleFont';
-      src: url('https://icedpipi.github.io/ai2025s/hw01/Font_112590032.woff2') format('woff2');
+    font-family:'CircleFont';
+    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
+  }
+  @font-face {
+    font-family:'112590032_Big5';
+    src: url(https://github.com/IcedPiPi/ai2025s/hw02/Font_112590032_2.woff2);
+    }
+  @font-face {
+    font-family:'112590032_notofu';
+    src: url(https://github.com/IcedPiPi/ai2025s/hw02/Font_112590032_2.woff2);
     }
 
   table {
