--- a/hw02/index.html
+++ b/hw02/index.html
@@ -21,11 +21,11 @@
 
   @font-face {
     font-family:'112590032_Big5';
-    src: url(https://github.com/IcedPiPi/ai2025s/hw02/Font_112590032_2.woff2);
+    src: url(https://github.com/IcedPiPi/ai2025s/hw02/Font_112590032_2.woff2) format(woff2);
     }
   @font-face {
     font-family:'112590032_notofu';
-    src: url(https://github.com/IcedPiPi/ai2025s/hw02/Font_112590032_2.woff2);
+    src: url(https://github.com/IcedPiPi/ai2025s/hw02/Font_112590032_2.woff2) format(woff2);
     }
 
   table {
